# python-ml-ai-engineering-labs

./: .gitignore  KMeans.py  README.md  conditional-probability.py  decision_tree_random_forest.py  distributions.py  k_nearest_neighbors_movie_recommender.py  main.py  mean_median_mode.py  moments.py  naive_bayes_email_classifier.py  naive_bayes_email_classifier_train_test_split.py  pca_iris_visualization.py  percentiles.py  personalized_movie_recommender.py  pyproject.toml  recommender_movie_similarity.py  regression-README.md  regression-linear.py  regression-multiple.py  regression-polynomial.py  standard_deviation_variance.py  supervised_learning_train_test_demo.py  xgboost_classifier.py
docs/fundamentals/: supervised_unsupervised_learning.md  topology_tuning.md
docs/neural_networks/: activation_functions.md  autodiff.md  backpropagation.md  softmax.md
docs/optimization_training/: global_minimum_local_minimum.md  gradient_descent.md  optimization.md  overfitting_regularization.md
docs/probability_statistics/: conditional_probability_bayes_theorem.md  covariance_correlation.md  percentiles_moments.md  pmf-pdf.md  variance.md
docs/reinforcement_learning/: reinforcement_learning.md
docs/supervised_learning/: confusion_matrix.md  decision_tree.md  decision_tree_root_depth.md  ensemble_learning.md  k_nearest_neighbors.md  linear_regression.md  polynomial_regression.md
docs/unsupervised_learning/: k_means_clustering.md  pca.md
emails/ham/: 02439.e0ab144da5d5f95e6accf8d8a84f5fd1
emails/spam/: 00037.21cc985cc36d931916863aed24de8c27  (+4 more)
