[project]
name = "python-ml-ai-engineering-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "scipy-stubs>=1.18.0.0",
    "statsmodels>=0.14.6",
    "xlrd>=2.0.2",
]
